# cantina_externals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: bitcrush~.h  cantina~.hpp
include/cant/: impl.hpp
patches/: Alive.pd  cantroller~.pd  playable_velocity.pd
source/: bitcrush~.c  cantina~.cpp
